--- a/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
@@ -3,43 +3,42 @@
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h5 class="my-0 font-weight-bold">
-                        HERO CARD INFORMATION
-                    </h5>
+            <li class="list-group-item justify-content-center bg-paper-header">
+                <div class="text-center">
+                    <h2 class="my-0 font-weight-bold">
+                        @Model.NickName
+                    </h2>
                 </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-
-                <img src="~/@Model.ProfessionImageAddress" width="100" height="100" />
-                <h3>@Model.Profession.ToString()</h3>
-
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <h3>@Model.NickName </h3>
-
-            </li>
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div class="col-md-12">
-                    <img src="~/@Model.AvatarImageAddress" width="100%" height="100%" />
+            <li class="list-group-item bg-paper-color">
+                <div class="justify-content-start">
+                    <img class="p-0 m-0" src="~/@Model.ProfessionImageAddress" width="70" height="70" />
+                    <span class="pt-4 px-3 h4 font-weight-bold">@Model.Profession.ToString()</span>
                 </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item bg-paper-color justify-content-center">
                 <div class="col-md-12">
-                    <div class="btn-group btn-block">
-                        <a class="btn btn-outline-primary" asp-action="EditNickName">
-                            Edit Name
-                        </a>
-                        <a class="btn btn-outline-primary" asp-action="EditAvatar">
-                            Edit Avatar
-                        </a>
+                    <img class="p-0 m-0" src="~/@Model.AvatarImageAddress" width="100%" height="100%" />
+                </div>
+            </li>
+
+            @if (Model.ShowButtons)
+            {
+                <li class="list-group-item bg-paper-color justify-content-center">
+                    <div class="col-md-12">
+                        <div class="btn-group btn-block">
+                            <a class="btn btn-outline-primary" asp-action="EditNickName">
+                                Edit Name
+                            </a>
+                            <a class="btn btn-outline-primary" asp-action="EditAvatar">
+                                Edit Avatar
+                            </a>
+                        </div>
                     </div>
-                </div>
-            </li>
+                </li>
+            }
         </ul>
     </div>
 </div>
