--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h4 class="my-0 font-weight-bold">
                         Delete Player's Account
@@ -18,13 +18,13 @@
         </ul>
         <br />
 
-        <div class="alert alert-danger font-weight-bold">
+        <div class="alert alert-danger text-danger font-weight-bold text-center">
             <h3>Are you sure you want to delete your Player account?</h3>
             <h4>All created characters and progress made on this account will be lost!</h4>
         </div>
 
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div class="col-md-5">
                     <dl class="row">
                         <dt class="col-sm-5">
