--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -4,10 +4,10 @@
 <div class="row">
     <div class="col-12">
         <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
-                    <h5 class="my-0 font-weight-bold">
-                        PLAYER CARD INFORMATION
+                    <h5 class="my-0 font-weight-bold text-center">
+                        PLAYER ACCOUNT INFORMATION
                     </h5>
                 </div>
 
@@ -17,7 +17,7 @@
 
     <div class="col-12">
         <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h6 class="my-0">User name:</h6>
                     <small class="font-weight-bold">
@@ -27,7 +27,7 @@
                     <a class="btn btn-outline-danger btn-block" asp-action="Edit">Edit Player's Profile</a>
                 </div>
             </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h6 class="my-0">Email:</h6>
                     <small class="text-muted">
@@ -35,7 +35,7 @@
                     </small>
                 </div>
             </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h6 class="my-0">Date of birth:</h6>
                     <small class="text-muted">
