--- a/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
@@ -4,10 +4,33 @@
     ViewData["Title"] = "Edit Avatar";
 }
 
+<header>
+    <style>
+        [type=radio] {
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* IMAGE STYLES */
+        [type=radio] + img {
+            cursor: pointer;
+        }
+
+        /* CHECKED STYLES */
+        [type=radio]:checked + img {
+            outline: 3px solid #f00;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+</header>
+
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h4 class="my-0 font-weight-bold">
                         Edit Hero's Avatar
@@ -17,7 +40,7 @@
         </ul>
         <br />
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <form asp-action="EditAvatar">
                     <hr />
                     <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
@@ -29,11 +52,11 @@
                         {
                             var image = $"Images/Hero/Avatars/Wizard-{i}.png";
                             <div class="col-sm-3">
-                                <div class="row" align="center">
-                                    <img src="~/@image" width="210" height="280" />
-                                </div>
-                                <div class="row">
-                                    <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i" /></div>
+                                <div>
+                                    <label>
+                                        <input asp-for="AvatarImageNumber" type="radio" value="@i"/>
+                                        <img class="p-1" src="~/@image" width="80%" height="80%"/>
+                                    </label>
                                 </div>
                             </div>
                         }
@@ -46,37 +69,11 @@
                 </form>
             </li>
         </ul>
+    </div>
+</div>
 
-        @*<h3>Edit Hero's Avatar</h3>
-        <form asp-action="EditAvatar">
-        <hr/>
-        <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
-        <span>Your balance: </span><span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span><span> gold</span><br/>
-        <span asp-validation-for="AvatarImageNumber" class="text-danger font-weight-bold"></span>
-        <hr/>
-        <div class="row">
-        @for (int i = 1; i <= 7; i++)
-        {
-        var image = $"Images/Hero/Avatars/Wizard-{i}.png";
-        <div class="col-sm-3">
-        <div class="row" align="center">
-        <img src="~/@image" width="210" height="280"/>
-        </div>
-        <div class="row">
-        <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i"/></div>
-        </div>
-        </div>
-        }
-        </div>
-        <hr/>
-        <div class="btn-group">
-        <a type="button" class="btn btn-warning" asp-action="Details">Back to Details</a>
-        <input type="submit" value="Set Avatar" class="btn btn-primary"/>
-        </div>
-        </form>*@
-
-        @section Scripts {
-            @{
-                await Html.RenderPartialAsync("_ValidationScriptsPartial");
-            }
-        }
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
