--- a/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
@@ -5,31 +5,32 @@
 }
 
 <header>
+    <style>
+        [type=radio] {
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
 
-    @*    <style>
-    [type=radio] {
-    position: absolute;
-    opacity: 0;
-    width: 0;
-    height: 0;
-    }
+            /* IMAGE STYLES */
+            [type=radio] + img {
+                cursor: pointer;
+            }
 
-    /* IMAGE STYLES */
-    [type=radio] + img {
-    cursor: pointer;
-    }
-
-    /* CHECKED STYLES */
-    [type=radio]:checked + img {
-    outline: 2px solid #f00;
-    }
-    </style>*@
+            /* CHECKED STYLES */
+            [type=radio]:checked + img {
+                outline: 3px solid #f00;
+                height: 100%;
+                width: 100%;
+            }
+    </style>
 </header>
 
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h4 class="my-0 font-weight-bold">
                         Create New Hero
@@ -41,7 +42,7 @@
         <br />
 
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h5 class="my-0 font-weight-bold">
                         Choose avatar of your hero
@@ -49,120 +50,53 @@
                 </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
-                    <h class="my-0 font-weight-bold">
-                        <form asp-action="SetAvatar">
-                            <input asp-for="Profession" hidden="true" />
-                            <div class="row">
-
-                                @for (int i = 1; i <= 7; i++)
-
-                                {
-
-                                    var image = $"Images/Hero/Avatars/Wizard-{i}.png";
-                                    <div class="col-sm-3">
-                                        <div class="row" align="center">
-
-                                            <img src="~/@image" width="210" height="280" />
-
-                                        </div>
-                                        <div class="row">
-
-                                            <div>
-                                                @if (i == 1)
-                                                {
-
-                                                    <input asp-for="AvatarImageNumber" type="radio" value="@i" checked />
-
-
-                                                }
-                                                else
-                                                {
-
-                                                    <input asp-for="AvatarImageNumber" type="radio" value="@i" />
-
-
-                                                }
-                                            </div>
-
-                                        </div>
+                    <form asp-action="SetAvatar">
+                        <input asp-for="Profession" hidden="true" />
+                        <div class="row">
+                            @for (int i = 1; i <= 7; i++)
+                            {
+                                var image = $"Images/Hero/Avatars/Wizard-{i}.png";
+                                <div class="col-sm-3">
+                                    <div>
+                                        <label>
+                                            <input asp-for="AvatarImageNumber" type="radio" value="@i"/>
+                                            <img class="p-1" src="~/@image" width="80%" height="80%"/>
+                                        </label>
                                     </div>
-                                }
-
-                            </div>
-                            <hr />
-                            <div class="form-group">
-                                <input type="submit" value="Set Avatar" class="btn btn-outline-primary" />
-                            </div>
-                        </form>
+                                </div>
+                            }
+                        </div>
+                        <hr />
+                        <div class="form-group">
+                            <input type="submit" value="Set Avatar" class="btn btn-outline-primary" />
+                        </div>
+                    </form>
                 </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <form asp-action="SetProfessionView">
                         <input asp-for="Profession" hidden="true" />
                         <input asp-for="AvatarImageNumber" hidden="true" />
 
-                            <div class="btn-group btn-block">
-                                <input type="submit" asp-controller="Hero" asp-action="SetProfessionView" value="Back" class="btn btn-outline-warning" />
-                                <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
-                            </div>
+                        <div class="btn-group btn-block">
+                            <input type="submit" asp-controller="Hero" asp-action="SetProfessionView" value="Back" class="btn btn-outline-warning" />
+                            <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
+                        </div>
 
                     </form>
                 </div>
             </li>
         </ul>
     </div>
+</div>
 
 
-
-
-    @*    <form asp-action="SetAvatar">
-    <input asp-for="Profession" hidden="true" />
-    <hr />
-    <div class="row">
-    @for (int i = 1; i <= 7; i++)
-    {
-    var image = $"Images/Hero/Avatars/Wizard-{i}.png";
-    <div class="col-sm-3">
-    <div class="row" align="center">
-    <img src="~/@image" width="210" height="280" />
-    </div>
-    <div class="row">
-    @if (i == 1)
-    {
-    <input asp-for="AvatarImageNumber" type="radio" value="@i" checked />
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    else
-    {
-    <input asp-for="AvatarImageNumber" type="radio" value="@i" />
-    }
-    </div>
-    </div>
-    }
-    </div>
-    <hr />
-    <div class="form-group">
-    <input type="submit" value="Set Avatar" class="btn btn-primary" />
-    </div>
-    </form>*@
-
-    @*    <div>
-    <form asp-action="SetProfessionView">
-    <input asp-for="Profession" hidden="true" />
-    <input asp-for="AvatarImageNumber" hidden="true" />
-    <div class="btn-group">
-    <input type="submit" asp-controller="Hero" asp-action="SetProfessionView" value="Back" class="btn btn-warning" />
-    <a class="btn btn-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
-    </div>
-    </form>
-    </div>*@
-
-    @section Scripts {
-        @{
-            await Html.RenderPartialAsync("_ValidationScriptsPartial");
-        }
-    }
-    </div>
+}
