--- a/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
@@ -3,38 +3,38 @@
 <div class="row">
     <div class="col-md-12">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h5 class="my-0 font-weight-bold">
+            <li class="list-group-item justify-content-center bg-paper-header">
+                <div class="text-center">
+                    <h4 class="my-0 font-weight-bold">
                         Hero statistics
-                    </h5>
+                    </h4>
                 </div>
             </li>
 
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-            <label asp-for="RankPoints"></label>
-            @($"{Model.RankPoints:##,##0}")
+            <li class="list-group-item bg-paper-color">
+                <div class="d-flex justify-content-between">
+                    <label class="font-weight-bolder h5" asp-for="RankPoints"></label>
+                    <span class="font-weight-bolder h5">@($"{Model.RankPoints:##,##0}")</span>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <label class="font-weight-bolder h5" asp-for="WinRatio"></label>
+                    <span class="font-weight-bolder h5">@Model.WinRatio</span>
+                </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-            <label asp-for="TotalMatchPlayed"></label>
-            @($"{Model.TotalMatchPlayed:##,##0}")
-            </li>
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-            <label asp-for="TotalMatchWin"></label>
-            @($"{Model.TotalMatchWin:##,##0}")
-            </li>
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-            <label asp-for="TotalMatchLoose"></label>
-            @($"{Model.TotalMatchLoose:##,##0}")
-            </li>
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-            <label asp-for="WinRatio"></label>
-            @Model.WinRatio
+            <li class="list-group-item bg-paper-color">
+                <div class="d-flex justify-content-between">
+                    <label asp-for="TotalMatchPlayed"></label>
+                    <span class="text-black font-weight-bold">@($"{Model.TotalMatchPlayed:##,##0}")</span>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <label asp-for="TotalMatchWin"></label>
+                    <span class="text-success font-weight-bold">@($"{Model.TotalMatchWin:##,##0}")</span>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <label asp-for="TotalMatchLoose"></label>
+                    <span class="text-danger font-weight-bold">@($"{Model.TotalMatchLoose:##,##0}")</span>
+                </div>
             </li>
         </ul>
     </div>
