--- a/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
@@ -3,22 +3,22 @@
 <div class="row">
     <div class="col-md-12">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h5 class="my-0 font-weight-bold">
-                        Hero's Summary
-                    </h5>
+            <li class="list-group-item justify-content-center bg-paper-header">
+                <div class="text-center">
+                    <h4 class="my-0 font-weight-bold">
+                        Hero Summary
+                    </h4>
                 </div>
             </li>
-
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <label asp-for="HerosAvargeItemTier"></label>
-                @($"{Model.HerosAvargeItemTier:##0.00}")
+            
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
+                <label class="font-weight-bolder h4" asp-for="HerosAvargeItemTier"></label>
+                <span class="font-weight-bolder h3">@($"{Model.HerosAvargeItemTier:##0.00}")</span>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <label asp-for="Gold"></label>
-                @($"{Model.Gold:##,##0}")
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
+                <label class="h5" asp-for="Gold"></label>
+                <span class="font-weight-bold h5">@($"{Model.Gold:##,##0}")</span>
             </li>
         </ul>
     </div>
