--- a/wizards/WizardsWeb/Views/Merchant/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/Index.cshtml
@@ -7,15 +7,15 @@
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item justify-content-between bg-paper-color">
                 <div>
-                    <h5 class="my-0 font-weight-bold">
+                    <h4 class="my-0 font-weight-bold text-center">
                         Merchant
-                    </h5>
+                    </h4>
                 </div>
             </li>
 
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div class="btn-group btn-block">
                     <a class="btn btn-outline-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
                     <a class="btn btn-outline-warning" asp-controller="Inventory" asp-action="Index">Back to Inventory</a>
@@ -33,9 +33,8 @@
 
 <div class="row">
     <div class="col-md-6">
-
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item justify-content-between">
                 <div>
                     <partial name="_HeroStorage" model="@Model.HeroStorage" />
                 </div>
@@ -44,19 +43,14 @@
     </div>
 
     <div class="col-md-6">
-
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item justify-content-between">
                 <div>
                     <partial name="_MerchantStorage" model="@Model.MerchantStorage" />
                 </div>
             </li>
         </ul>
     </div>
-
-
-
-
 </div>
 
 
@@ -66,5 +60,5 @@
 </script>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+        <partial name="_ValidationScriptsPartial" />
     }
