--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <h4 class="my-0 font-weight-bold">
                         Password change for @Model.UserName
@@ -18,7 +18,7 @@
         </ul>
         <br />
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
 
 
                     <div class="col-md-12">
