--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
         <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
+            <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div>
                     <div>
                         <h5 class="my-0 font-weight-bold">
@@ -16,7 +16,7 @@
                 </div>
             </li>
 
-            <table class="table table-light table-hover">
+            <table class="table table-borderless table-hover bg-paper-color">
                 <thead>
                     <tr>
                         <th>
