New Pictures; Modify visuality in ranking; cosmetic changes; READY TO PULL REQUEST;

--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -13,7 +13,7 @@
                 <div class="row g-0">
 
                     <div class="col-lg-6">
-                        <img src="~/Images/Tapeta-2.jpg" alt="Site Logo" style="height: 100%; width: 100%"/>
+                        <img src="~/Images/Tapeta-2B.jpg" alt="Site Logo" style="height: 100%; width: 100%"/>
                     </div>
 
                     <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
