--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -38,9 +38,6 @@
 
                     <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width: 20%" />
 
-                    @*  <a href='@Url.Action("Index", "Home")'>
-                    <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width:20%">
-                    </a>*@
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +49,13 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="News" asp-action="Index">News</a>
+                                <a class="nav-link text-secondary disabled" asp-area="" asp-controller="News" asp-action="Index">News</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="About" asp-action="Index">About</a>
+                                <a class="nav-link text-secondary disabled" asp-area="" asp-controller="About" asp-action="Index">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
+                                <a class="nav-link text-secondary disabled" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Search" asp-action="Index">Ranking</a>
@@ -89,7 +86,7 @@
 
         <footer class="footer mt-auto text-golden-dark navbar-light bg-brown box-shadow">
             <div class="container" style='text-align:center'>
-                &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 1.0
+                &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 2.0
             </div>
         </footer>
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
