repair litle issues; solve problems with validation settings; seed data for presentation; code cleenup;

--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Wizards Home";
 }
 
 <head>
     <style>
-        .dupa {
+        .welcome-card {
             background-image: url("/Images/Tapeta-3.jpg");
             background-repeat: no-repeat;
             background-attachment: inherit;
@@ -13,8 +13,8 @@
         }
     </style>
 </head>
-<div class="dupa col-12">
-    <div class="text-center text-black">
+<div class="welcome-card col-12">
+    <div class="text-center">
         <br /><br />
         <h1 class="font-weight-bolder">Welcome Adventurer!</h1>
         <br />
@@ -22,5 +22,3 @@
         <br />
     </div>
 </div>
-
-
