--- a/wizards/WizardsWeb/Views/Player/Login.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Login.cshtml
@@ -20,6 +20,7 @@
 
                             <form asp-action="Login">
                                 <p>Please login to your account</p>
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                                 <div class="form-outline mb-4">
                                     <label asp-for="UserName" class="control-label"></label>
