--- a/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
@@ -6,7 +6,7 @@
             <li class="list-group-item justify-content-center bg-paper-header">
                 <div class="text-center">
                     <h4 class="my-0 font-weight-bold">
-                        Hero Summary
+                        Hero summary
                     </h4>
                 </div>
             </li>
@@ -23,27 +23,3 @@
         </ul>
     </div>
 </div>
-
-
-@*<h4>Hero's Summary</h4>
-<hr />
-<div class="col-md-12">
-    <div class="row">
-        <div class="col-md-7">
-            <label class="align-content-center" asp-for="HerosAvargeItemTier"></label>
-        </div>
-        <div class="col-md-5">
-            <h5><span class="font-weight-bold">@($"{Model.HerosAvargeItemTier:##0.00}")</span></h5>
-        </div>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="col-md-7">
-            <label asp-for="Gold"></label>
-        </div>
-        <div class="col-md-5">
-            <span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span>
-        </div>
-    </div>
-    <hr />
-</div>*@
