--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -48,7 +48,7 @@
 
     <div class="col-md-4">
         <ul class="list-group">
-            <li class="list-group-item justify-content-between">
+            <li class="list-group-item bg-transparent border-0 justify-content-between">
                 <div>
                     <partial name="~/Views/Hero/_HeroSummary.cshtml" model="@Model.HeroSummary"/>
                     <br/>
@@ -65,5 +65,5 @@
 </script>
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
-        }
+    <partial name="_ValidationScriptsPartial" />
+}
