--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -1,5 +1,5 @@
-﻿@model WizardsWeb.ModelViews.Inventory.InventoryModelView
-@using WizardsWeb.Helpers
+﻿@using WizardsWeb.Extensions
+@model WizardsWeb.ModelViews.Inventory.InventoryModelView
 
 <div class="col-12">
     <div class="row">
