--- a/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,40 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Wizards.Core.Model
+@using Wizards.Core.Model.Enums
 
 @inject SignInManager<Player> SignInManager
 @inject UserManager<Player> UserManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item btn-group">
-        <a id="manage" class="btn btn-outline-light" asp-controller="Player" asp-action="Details">@UserManager.GetUserName(User)</a>
-        <a id="logout" class="btn btn-outline-warning" asp-controller="Player" asp-action="Logout">Logout</a>
-    </li>
-}
-else
-{
-    <li class="nav-item btn-group">
-        <a class="btn btn-outline-primary" id="login" asp-controller="Player" asp-action="Login">Login</a>
-        <a class="btn btn-outline-warning" id="register" asp-controller="Player" asp-action="Create">Register</a>
-    </li>
-}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item btn-group">
+                @if (User.IsInRole(UserRoles.Admin.ToString()))
+                {
+                    <a id="manage" class="btn btn-outline-light" asp-controller="Player" asp-action="Details">
+                        @UserManager.GetUserName(User) (Admin)
+                    </a>
+                }
+                else if (User.IsInRole(UserRoles.Moderator.ToString()))
+                {
+                    <a id="manage" class="btn btn-outline-light" asp-controller="Player" asp-action="Details">
+                        @UserManager.GetUserName(User) (Moderator)
+                    </a>
+                }
+                else
+                {
+                    <a id="manage" class="btn btn-outline-light" asp-controller="Player" asp-action="Details">
+                        @UserManager.GetUserName(User)
+                    </a>
+                }
+            <a id="logout" class="btn btn-outline-warning" asp-controller="Player" asp-action="Logout">Logout</a>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item btn-group">
+            <a class="btn btn-outline-primary" id="login" asp-controller="Player" asp-action="Login">Login</a>
+            <a class="btn btn-outline-warning" id="register" asp-controller="Player" asp-action="Create">Register</a>
+        </li>
+    }
 </ul>
