Add Wizards.GamePlay project; Set Dependencies; Add Skill and HeroSkill; Adjust Namespaces;

--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -1,5 +1,5 @@
-﻿@model WizardsWeb.ModelViews.HeroModelViews.HeroCreateModelView
-@using Wizards.Core.Model.Enums
+﻿@using Wizards.Core.Model.UserModels.Enums
+@model WizardsWeb.ModelViews.HeroModelViews.HeroCreateModelView
 
 @{
     ViewData["Title"] = "Set Profession";
