--- a/wizards/WizardsWeb/Views/Item/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Item/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model WizardsWeb.ModelViews.ItemModelViews.ItemCreateModelView
-@using Wizards.Core.Model.Enums
+﻿@using Wizards.Core.Model.UserModels.Enums
+@model WizardsWeb.ModelViews.ItemModelViews.ItemCreateModelView
 
 @{
     ViewData["Title"] = "Create Item";
