--- a/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView>
-@using Wizards.Core.Model.Enums
 @using WizardsWeb.Extensions
+@using Wizards.Core.Model.UserModels.Enums
 
 <table class="table">
     <thead>
