--- a/wizards/WizardsWeb/Views/Merchant/_MerchantStorage.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/_MerchantStorage.cshtml
@@ -1,5 +1,5 @@
-﻿@model WizardsWeb.ModelViews.Merchant.MerchantStorageModelView
-@using Wizards.Core.Model.Enums
+﻿@using Wizards.Core.Model.UserModels.Enums
+@model WizardsWeb.ModelViews.Merchant.MerchantStorageModelView
 
 <div class="row">
     <div class="col-8">
