--- a/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Wizards.Core.Model
-@using Wizards.Core.Model.Enums
+@using Wizards.Core.Model.UserModels
+@using Wizards.Core.Model.UserModels.Enums
 
 @inject SignInManager<Player> SignInManager
 @inject UserManager<Player> UserManager
