--- a/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
@@ -1,5 +1,5 @@
-﻿@model WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView
-@using Wizards.Core.Model.Enums
+﻿@using Wizards.Core.Model.UserModels.Enums
+@model WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView
 
 <div class="row p-0 m-0">
     <div class="col-12 text-center">
